# axon-rust

./: README.md
gift-card-proto/: Cargo.toml  README.md  build.rs  rest.http  webhook.http
gift-card-proto/protos/: commands.proto  events.proto  queries.proto
gift-card-proto/src/: cleanup.rs  command_handling.rs  main.rs  projection.rs  rest_api.rs  warp_util.rs
gift-card-proto/src/messages/: commands.rs  events.rs  mod.rs  queries.rs
gift-card-raw/: Cargo.toml  README.md  rest.http  test.http
gift-card-raw/src/: cleanup.rs  command_handling.rs  main.rs  projection.rs  rest_api.rs  temp_fix.rs  warp_util.rs
gift-card-raw/src/messages/: commands.rs  events.rs  mod.rs  queries.rs
gift-card-rust/: Cargo.toml  README.md  docker-compose.yml  test.http
gift-card-rust/src/: aggregate_repository.rs  aggregate_web.rs  api.rs  command.rs  command_gateway.rs  decider.rs  gift_card_aggregate_controller.rs  gift_card_api.rs  gift_card_command_handler.rs  gift_card_controller.rs  gift_card_event_repository.rs  main.rs  query.rs
gift-card-rust/src/command/: gift_card_aggregate_controller.rs  gift_card_command_gateway.rs  gift_card_command_handler.rs  gift_card_event_repository.rs
gift-card-rust/src/query/: gift_card_event_handler.rs  gift_card_materialized_view_controller.rs  gift_card_query_gateway.rs  gift_card_view_state_repository.rs
synapse-client/: Cargo.toml  README.md
synapse-client/.openapi-generator/: FILES
synapse-client/docs/: AggregateApi.md  AuthenticationApi.md  AuthenticationObject.md  ClientAuthentication.md  ClientAuthenticationTokenPrototype.md  CommandHandler.md  CommandHandlerRegistration.md  CommandHandlersApi.md  CommandMessage.md  CommandResponseMessage.md  CommandsApi.md  EndpointOption.md  EndpointType.md  Error.md  EventHandler.md  EventHandlerRegistration.md  EventHandlersApi.md  EventMessage.md  EventsApi.md  ListOfAuthenticationObjects.md  ListOfClientAuthentication.md  ListOfCommandHandlers.md  ListOfEventHandlers.md  ListOfEventMessages.md  ListOfPublishableEventMessages.md  ListOfQueryHandlers.md  ListOfServerAuthentication.md  Message.md  PublishableEventMessage.md  QueriesApi.md  QueryHandler.md  QueryHandlerRegistration.md  QueryHandlersApi.md  QueryMessage.md  QueryResponseCardinality.md  QueryResponseMessage.md  ServerAuthentication.md  ServerAuthenticationTokenPrototype.md
synapse-client/src/apis/: aggregate_api.rs  authentication_api.rs  command_handlers_api.rs  commands_api.rs  configuration.rs  event_handlers_api.rs  events_api.rs  mod.rs  queries_api.rs  query_handlers_api.rs
synapse-client/src/models/: authentication_object.rs  client_authentication.rs  client_authentication_token_prototype.rs  command_handler.rs  command_handler_registration.rs  command_message.rs  command_response_message.rs  endpoint_option.rs  endpoint_type.rs  error.rs  event_handler.rs  event_handler_registration.rs  event_message.rs  list_of_authentication_objects.rs  list_of_client_authentication.rs  list_of_command_handlers.rs  list_of_event_handlers.rs  list_of_event_messages.rs  list_of_publishable_event_messages.rs  list_of_query_handlers.rs  list_of_server_authentication.rs  message.rs  mod.rs  publishable_event_message.rs  (+7 more)
(+17 files in other folders)
