[package]
name = "gift-card-proto"
version = "0.1.0"
edition = "2021"
description = "A small demo project using the client directly"
license = "Apache-2.0

[dependencies]
base64 = "0.21.4"
bytes = "1"
dashmap = "5.5.3"
elsa = "1.9.0"
log = "0.4"
moka = { version = "0.11", features = ["future"] }
once_cell = "1.18.0"
prost = "0.12.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
simple_logger = "4.2.0"
synapse-client = { path = "../synapse-client" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"

[build-dependencies]
prost-build = "0.12.0"