[package]
name = "gift-card-raw"
version = "0.1.0"
edition = "2021"
description = "A small demo project using the client directly"
license = "Unlicense"

[dependencies]
once_cell = "1.18.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
synapse-client = { path = "../synapse-client" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"