[package]
name = "gift-card-raw"
version = "0.1.0"
edition = "2021"
description = "A small demo project using the client directly"
license = "Unlicense"

[dependencies]
dashmap = "5.5.3"
elsa = "1.9.0"
moka = { version = "0.11", features = ["future"] }
once_cell = "1.18.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "^2.0"
synapse-client = { path = "../synapse-client" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"