[package]
name = "gift-card-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synapse-client = { path = "../synapse-client" }
fmodel-rust = { path = "../fmodel-rust" }
async-trait = "0.1.49"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
derive_more = "0.99.17"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
