[package]
name = "gift-card-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse-client = { path = "../synapse-client" }
#fmodel-rust = "0.1.0"
fmodel-rust = { git = "https://github.com/fraktalio/fmodel-rust", branch = "main" }
async-trait = "0.1.49"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
derive_more = "0.99.17"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
strum = "0.25.0"
strum_macros = "0.25.0"
once_cell = "1.18.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

